--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@playwright/test": "^1.53.2",
     "@types/node": "^24.0.12",
     "dotenv": "^17.1.0",
+    "multiple-cucumber-html-reporter": "^3.9.3",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
