--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@cucumber/cucumber": "^11.3.0",
     "@playwright/test": "^1.54.1",
+    "@types/cucumber": "^6.0.1",
     "@types/node": "^24.0.12",
     "dotenv": "^17.1.0",
     "rimraf": "^6.0.1",
