--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@playwright/test": "^1.53.2",
     "@types/node": "^24.0.10",
     "cross-env": "^7.0.3",
-    "dotenv": "^17.1.0",
+    "dotenv": "^17.2.0",
     "multiple-cucumber-html-reporter": "^3.9.3",
     "playwright": "^1.53.2",
     "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "winston": "^3.17.0"
   }
 }
