--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "esNext",
     "module": "CommonJS",
     "strict": true,
+    "resolveJsonModule": true, 
     "esModuleInterop": true,
     "skipLibCheck": true,
     "outDir": "dist"
