--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "winston": "^3.17.0"
+  },
+  "dependencies": {
+    "csv-parser": "^3.2.0"
   }
 }
